# pipecate-phone-bots

./: .gitignore  CLAUDE.md  README.md
docs/: lead-nurturing-agent---demo-simplified-0803.json  lead-nurturing-agent---demo-simplified-0803_pipecat.json
server/: bot.py  bot_simple_flow.py  bot_vapi_flow.py  pyproject.toml  requirements.txt  test_simple_flow.py  vapi_to_pipecat_converter.py
server/flows/: __init__.py  functions.py  nodes.py
