[project]
name = "pipecat-server-lead-nurturing-flow"
version = "0.2.0"
description = "Client/server web example using Pipecat with conversation flows support"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[webrtc,silero,deepgram,openai,cartesia,runner]>=0.0.77",
    "pipecat-ai-flows>=0.0.1",
]

[dependency-groups]
dev = [
    "ruff~=0.12.1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
