[project]
name = "pipecat-lead-nurturing-bot"
version = "1.0.0"
description = "Lead nurturing bot with Vapi-style workflow implementation"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[webrtc,silero,deepgram,openai,cartesia,runner]>=0.0.77",
]

[dependency-groups]
dev = [
    "ruff~=0.12.1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
